<resources>
    <string name="app_name">Grw</string>
    <string name="app_name_long">Grw Mobi</string>
    <string name="app_nav_drawer_open">Open navigation drawer</string>
    <string name="app_nav_drawer_close">Close navigation drawer</string>
    <string name="app_error_ext_dir">Karta SD nie jest aktywna.</string>
    <string name="app_error_play_services">Błąd podczas łączenia z Google Play Services</string>
    <string name="app_error_settings">W ustawieniach urządzenia wyłącz opcję \'Pozorowane położenie\'.</string>
    <string name="app_error_init">Aktualizacja bazy danych lub Usług Google Play nie jest zakończona.</string>
    <string name="app_db_no_person">Brak danych osoby z ID %d</string>
    <string name="app_db_no_person_id">Brak danych osoby</string>
    <string name="app_db_no_institution">Brak danych instytucji z ID %d</string>
    <string name="app_db_no_institution_id">Brak danych instytucji</string>
    <string name="app_play_services_required">Aplikacja Grw Mobi do poprawnego działania wymaga zainstalowanej aktualnej wersji Google Play Services.</string>
    <string name="app_play_services_unavailable">Niestety na tym urządzeniu nie można zainstalować aktualnej wersji Google Play Services. Zgłoś ten problem osobie odpowiedzialnej za tablety w Twojej firmie.</string>
    <string name="app_play_services_canceled">Prawdopodobnie nie dokończyłeś instalacji Google Play Services. Spróbuj jeszcze raz.</string>
    <string name="app_play_services_ok">Odpowiednia wersja Google Play Services jest już zainstalowana.</string>
    <string name="app_play_services_title">Aktualizacja Google Play Services</string>
    <string name="app_permissions_required">Do poprawnego działania aplikacja wymaga kilku uprawnień. Prośba o ich akceptację.</string>
    <string name="app_permissions_not_accepted">Nie zaakceptowałeś wszystkich wymaganych uprawnień. Praca z aplikacją jest niemożliwa. Teraz możesz zaakceptować uprawnienia tylko poprzez menu systemowe Ustawienia -> Aplikacje -> Grw -> Uprawnienia.</string>
    <string name="app_email_help_menu">"  pomoc@grw.com"</string>
    <string name="app_email_help_addr">"pomoc@grw.com"</string>
    <string name="app_load_next">Pokaż pozostałe</string>
    <string name="app_load_old">Pobierz wizyty sprzed 3 miesięcy</string>
    <string name="app_sync_required">Wymagana synchronizacja danych! Upewnij się, że telefon/tabel ma połączenie z Internetem i kliknij przycisk \'Synchronizuj\'.</string>
    <string name="main_nav_start">Start</string>
    <string name="main_nav_agenda">Plan wizyt</string>
    <string name="main_nav_checkin">Moja lokalizacja</string>
    <string name="main_nav_locations">Historia lokalizacji</string>
    <string name="main_nav_people">Osoby</string>
    <string name="main_nav_institutions">Instytucje</string>
    <string name="main_nav_presentations">Slajdy</string>
    <string name="main_nav_info">Ustawienia</string>
    <string name="main_nav_web_link">Grw Web</string>
    <string name="main_nav_help_link">Instrukcja</string>
    <string name="widget_checkin_btn">Moja lokalizacja</string>
    <string name="widget_checkin_out">Zamelduj się wychodząc</string>
    <string name="widget_visits_time">Czas wizyt: %s</string>
    <string name="widget_not_logged">Nie jesteś zalogowany</string>
    <string name="widget_do_login">Zaloguj się</string>
    <string name="db_activity_report_new">Dodaj aktywność</string>
    <string name="db_checkin_visits_time">Czas wizyt w sumie</string>
    <string name="db_checkin_avg_per_visit">Śr. na wizytę odbytą</string>
    <string name="db_checkin_no_visits">Brak zaraportowanych wizyt</string>
    <string name="db_checkin_no_avg">Nie można policzyć śr.</string>
    <string name="db_checkin_checkin">Moja lokalizacja</string>
    <string name="db_checkin_checkin_out">Zamelduj się wychodząc</string>
    <string name="db_checkin_locations">Historia lokalizacji</string>
    <string name="db_cities_details">Cały plan</string>
    <string name="db_cities_map">Dzisiaj na mapie</string>
    <string name="db_cities_plan">"Plan: "</string>
    <string name="db_cities_plan_empty">Plan wykonany lub pusty</string>
    <string name="db_cities_visited">"Odwiedzone: "</string>
    <string name="db_cities_visited_empty">Brak wykonanych wizyt</string>
    <string name="db_recent_persons_title">Ostatnio oglądane</string>
    <string name="db_recent_persons_person">Osoby</string>
    <string name="db_recent_persons_inst">Instytucje</string>
    <string name="db_recent_presentations_title">Ostatnie slajdy</string>
    <string name="db_recent_presentations_none">Brak</string>
    <string name="db_recent_presentations_btn">Slajdy</string>
    <string name="db_recent_presentations_no_context">Niewybrany odbiorca pokazu slajdów</string>
    <string name="db_recent_presentations_context">"Odbiorca pokazu: "</string>
    <string name="db_footer">"2016 © Grw"</string>
    <string name="db_loading_error">Niestety nie udało się obliczyć statystyk</string>
    <string name="full_sync_title">Grw Mobi - Synchronizacja danych</string>
    <string name="full_sync_message">Pełna synchronizacja danych może zająć kilka minut. Prosimy w tym czasie nie wyłączać telefonu.</string>
    <string name="full_sync_btn_start">Start</string>
    <string name="full_sync_in_progress">Pobieranie bazy danych …</string>
    <string name="full_sync_failed">Wystąpił błąd podczas synchronizacji danych.</string>
    <string name="full_sync_ok">Synchronizacja danych zakończona.</string>
    <string name="upgrade_title">Aktualizacja aplikacji Grw</string>
    <string name="upgrade_introduction">Do dalszej pracy z aplikacją Grw wymagana jest jej aktualizacja.</string>
    <string name="upgrade_start_download">Rozpocznij pobieranie</string>
    <string name="upgrade_install">Do dalszej pracy z aplikacją Grw wymagana jest jej aktualizacja. Prosimy o akceptację jej instalacji.</string>
    <string name="upgrade_accept_install">Zainstaluj nową wersję</string>
    <string name="upgrade_downloading">Pobieranie nowej wersji aplikacji może potrwać kilka minut.</string>
    <string name="upgrade_download_error">Wystąpił błąd podczas pobierania nowej wersji. Upewnij się, że masz połączenie z Internetem i spróbuj ponownie.</string>
    <string name="upgrade_download_in_progress">Pobieranie nowej wersji w toku.</string>
    <string name="upgrade_company_installer">Do dalszej pracy z aplikacją Grw wymagana jest jej aktualizacja. Przejdź do sklepu Google Play i zaakceptuj instalację nowej wersji.</string>
    <string name="upgrade_notification">Aktualizacja aplikacji Grw</string>
    <string name="upgrade_notification_long">Prosimy o akceptację instalacji nowej wersji aplikacji Grw. Jest to wymagane do kontynuacji pracy.</string>
    <string name="upgrade_installer_playstore">Do dalszej pracy z aplikacją Grw wymagana jest jej aktualizacja. Przejdź do sklepu Play i kliknij na przycisk Aktualizuj.</string>
    <string name="upgrade_installer_playstore_btn">Grw w Sklepie Play</string>
    <string name="info_title">Ustawienia</string>
    <string name="info_logged_as">Zalogowany jako</string>
    <string name="info_btn_logout">Wyloguj</string>
    <string name="info_sync_before_logout">Na urządzeniu są dane nieprzesłane do bazy centralnej - kliknij przycisk \'Synchronizuj\'. Następnie jeszcze raz kliknij \'Wyloguj\'.</string>
    <string name="info_data_sync_label">Ostatnia synchronizacja danych</string>
    <string name="info_data_sync_empty">Nigdy</string>
    <string name="info_btn_sync">Synchronizuj</string>
    <string name="info_sync_in_progreess">Synchronizacja danych jest w trakcie wykonywania.</string>
    <string name="info_sync_ok">Synchronizacja danych zakończona.</string>
    <string name="info_sync_net_error">Synchronizacja danych przerwana. Problem z dostępem do Internetu.</string>
    <string name="info_sync_failed">Wystąpił błąd podczas synchronizacji danych.</string>
    <string name="info_sync_repo_ok">Synchronizacja plików prezentacji zakończona.</string>
    <string name="info_sync_repo_net_error">Synchronizacja plików prezentacji przerwana. Problem z dostępem do Internetu.</string>
    <string name="info_sync_repo_failed">Wystąpił błąd podczas synchronizacji plików prezentacji.</string>
    <string name="info_required_upgrade">Wymagane jest zainstalowanie nowej wersji aplikacji aby kontynuować pracę.</string>
    <string name="info_app_version">Wersja aplikacji</string>
    <string name="info_reset_apgs_ok">Dane AGPS zostały zaktualizowane</string>
    <string name="info_reset_apgs_failed">Wystąpił błąd podczas aktualizacji danych AGPS</string>
    <string name="info_reset_agps_no_network">Musisz być podłączony do Internetu aby zaktualizować dane AGPS</string>
    <string name="info_btn_help">Pokaż pomoc</string>
    <string name="info_advanced">Inne</string>
    <string name="info_advanced_btn">Pokaż zaawansowane</string>
    <string name="info_full_sync">Pełna synchronizacja</string>
    <string name="info_reset_agps">Reset AGPS</string>
    <string name="login_title">Grw Mobi - Logowanie</string>
    <string name="login_company">Firma</string>
    <string name="login_name">Email</string>
    <string name="login_password">Hasło</string>
    <string name="login_btn_login">Zaloguj</string>
    <string name="login_error_company">Pole firma nie może być puste.</string>
    <string name="login_error_email">Pole email nie może być puste.</string>
    <string name="login_error_password">Pole hasło nie może być puste.</string>
    <string name="login_sending_data">Przesyłanie danych przez Internet. Proszę czekać …</string>
    <string name="login_while_no_network">Musisz być podłączony do Internetu aby zalogować się do serwisu.</string>
    <string name="login_successful">Logowanie poprawne. Konto i hasło zapisane.</string>
    <string name="login_error_net">Wystąpił błąd podczas wysyłania danych. Upewnij się, że Twój telefon ma poprawnie skonfigurowanie połączenie z Internetem.</string>
    <string name="login_error_in_progress">Akcja anulowana, oczekiwanie na odpowiedź serwera.</string>
    <string name="login_account_info"><![CDATA[Twoja firma nie ma konta? Załóż je na stronie <a href="https://www.grw.com/presentations">Grw</a>.]]></string>
    <string name="locations_title">Moja lokalizacja</string>
    <string name="locations_no_gps">Uwaga: GPS jest wyłączony. Włącz go w ustawieniach telefonu/tabletu.</string>
    <string name="locations_no_network">Uwaga: określanie lokalizacji poprzez sieci komórkowe jest wyłączone. Włącz je w ustawieniach telefonu/tabletu.</string>
    <string name="locations_report_saved">Raport zapisany</string>
    <string name="loc_recently_reported">Ostatni raport zapisany przed niecałą minutą.</string>
    <string name="loc_finding">Określanie lokalizacji. Proszę czekać.</string>
    <string name="loc_no_gps_or_network">GPS lub lokalizacja poprzez sieć jest wyłączona. Określenie Twojej lokalizacji może być niemożliwe.</string>
    <string name="loc_location_details">Dokładność pomiaru %1$d metrów.</string>
    <string name="loc_super_accurate">Nie czekaj na załadowanie mapy tylko Zamelduj się.</string>
    <string name="loc_verify_on_map">Zweryfikuj lokalizację na mapie.</string>
    <string name="loc_not_closed_long">Zamelduj się wychodząc z instytucji. Umożliwi to dokładnie policzenie czasu pracy.</string>
    <string name="loc_history_no_address_long">Adres lokalizacji zostanie wyświetlony za godzinę.</string>
    <string name="loc_history_not_work">Tylko KM</string>
    <string name="loc_history_count_time">Policz czas</string>
    <string name="loc_history_comments_btn">Uwagi</string>
    <string name="browser_bar_presentation">pokaz slajdów:</string>
    <string name="browser_bar_cancel_btn">Anulowany</string>
    <string name="browser_bar_finished_btn">Zakończony</string>
    <string name="browser_bar_no_context">Niewybrany odbiorca pokazu slajdów</string>
</resources>