<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginLayout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.grw.mobi.ui.LoginActivity">

    <include layout="@layout/main_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:layout_margin="@dimen/margin_main" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:src="@drawable/Grw_logo" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_company_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_gravity="center_horizontal" >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_company"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:ems="12"
                    android:singleLine="true"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/login_company"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_email_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal" >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_email"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:ems="12"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:hint="@string/login_name"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_password_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal" >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:ems="12"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:hint="@string/login_password" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/login_result_message"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                tools:text="Error message"
                android:textColor="@color/loc_warn" />

            <ProgressBar
                android:id="@+id/login_progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:indeterminate="true" />

            <Button
                android:id="@+id/login_btn_login"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:padding="12dp"
                android:text="@string/login_btn_login"
                android:onClick="onLogin" />

            <TextView
                android:id="@+id/login_account_info"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="32dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                tools:text="Account info message" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>